# pass-tui

./: README.md  pyproject.toml
src/pass_tui/: __init__.py  app.py  config.py  password.py
src/pass_tui/cli/: __init__.py  auth.py  item.py  runner.py  settings.py  ssh_agent.py  totp.py  vault.py
src/pass_tui/screens/: __init__.py  base.py  confirm.py  error.py  forms.py  help.py  home.py  item_detail.py  item_list.py  login.py  new_item.py  settings.py  ssh.py  totp_dashboard.py  vault_list.py
src/pass_tui/widgets/: __init__.py  password_generator.py  totp.py
tests/: test_auth.py  test_auth_flow.py  test_forms.py  test_item.py  test_item_args.py  test_item_detail.py  test_password.py  test_runner.py  test_ssh_agent.py  test_totp.py  test_totp_widget.py  test_vault.py  test_vault_list.py
