[project]
name = "pass-tui"
version = "0.0.0"
description = "A terminal UI for Proton Pass, layered over the official pass-cli."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "textual>=0.80",
    "pydantic>=2.7",
    "pyperclip>=1.9",
    "platformdirs>=4.2",
    "tomli-w>=1.0",
]

[project.scripts]
pass-tui = "pass_tui.app:main"

[dependency-groups]
dev = [
    "textual-dev>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pass_tui"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
